Title Page support Title page support - still testing, no span parsing yet
Title Page recognition improved

parsing spans inside Title Page, improve HTML formatting

--- a/Source/FountainSharp/TestProjects/FountainSharp.Parse.Tests/FountainSharp.Editor/Scripts/SimpleTest.fountain
+++ b/Source/FountainSharp/TestProjects/FountainSharp.Parse.Tests/FountainSharp.Editor/Scripts/SimpleTest.fountain
@@ -1,4 +1,16 @@
-﻿EXT. BRICK'S PATIO - DAY
+﻿Title:
+	_**BRICK & STEEL**_
+	_**FULL RETIRED**_
+Credit: Written by
+Author: Stu Maschwitz
+Source: Story by KTM
+Draft date: 1/27/2012
+Contact:
+	Next Level Productions
+	1588 Mission Dr.
+	Solvang, CA 93463
+
+EXT. BRICK'S PATIO - DAY
 
 A gorgeous day.  The sun is shining.  But BRICK BRADDOCK, retired police detective, is sitting quietly, contemplating -- something.
 
